added pagination cardSet get
